--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
+#Compiled Source
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+*.a
+*.lib
+
+#Packages
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+#Environments
 .env
+/bin/
